load("@bzlparty_tools//lib:defs.bzl", "formatter", "formatter_test")
load("@rules_license//rules:license.bzl", "license")

package(
    default_applicable_licenses = [":license"],
    default_visibility = ["//visibility:public"],
)

license(
    name = "license",
    license_kinds = [
        "@rules_license//licenses/spdx:LGPL-3.0-or-later",
    ],
    license_text = "LICENSE",
)

exports_files([
    "LICENSE",
    "MODULE.bazel",
    "extensions.bzl",
])

#ifndef _BZLPARTY_RELEASE_
formatter(
    name = "format",
    config = ":formatter.json",
    mode = "fix",
    tools = {
        "@biome": "biome",
        "@buildifier_prebuilt//:buildifier": "buildifier",
    },
)

formatter_test(
    name = "check",
    config = ":formatter.json",
    mode = "check",
    tags = [
        "external",
        "no-cache",
        "no-sandbox",
    ],
    tools = {
        "@biome": "biome",
        "@shellcheck": "shellcheck",
        "@typos": "typos",
        "@buildifier_prebuilt//:buildifier": "buildifier",
    },
)
#endif
