load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(["qjs.bzl", "extensions.bzl"], visibility = ["//docs:__subpackages__"])

bzl_library(
  name = "qjs",
  srcs = ["qjs.bzl"],
  deps = [
    "@aspect_bazel_lib//lib:lists",
    "@aspect_rules_js//js:libs",
    "@bazel_tools//tools/build_defs/repo:cache.bzl",
  ],
  visibility = ["//visibility:public"],
)

bzl_library(
  name = "extensions",
  srcs = ["extensions.bzl"],
  deps = [":version"],
  visibility = ["//visibility:public"],
)

bzl_library(
  name = "version",
  srcs = ["version.bzl"],
  visibility = ["//quickjs:__subpackages__"],
)
