load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(":qjs_test.bzl", "qjs_test_suite")

package(default_visibility = ["//visibility:public"])

exports_files(["defs.bzl"])

toolchain_type(
    name = "qjs_toolchain_type",
)

toolchain_type(
    name = "qjsc_toolchain_type",
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@aspect_bazel_lib//lib:lists",
        "@aspect_rules_js//js:libs",
        "@bazel_tools//tools/build_defs/repo:cache.bzl",
        "@bzlparty_tools//lib:defs",
    ],
)

qjs_test_suite()
