exports_files(["qjs"])

# load("@rules_quickjs//quickjs:extensions.bzl", "quickjs_toolchain")
# quickjs_toolchain(
#     name = "quickjs",
#     executable = "qjs",
#     visibility = ["//visibility:public"],
# )
#
# toolchain(
#     name = "quickjs_toolchain",
#     toolchain = ":quickjs",
#     toolchain_type = "@rules_quickjs//quickjs:toolchain_type",
# )

# alias(
#   name = "qjs",
#   actual = select({
#     ":linux-x86_64": "quickjs-linux-x86_64",
#   }),
# )
#
# config_setting(
#   name = "linux-x86_64",
#   constraint_values = [
#       "@platform//os:linux",
#       "@platform//cpu:x86_64",
#   ],
# )
#
# config_setting(
#   name = "linux-x86",
#   constraint_values = [
#       "@platform//os:linux",
#       "@platform//cpu:x86_32",
#   ],
# )
